welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:4: error: '<-' expected but ')' found.
  for (i->1 to 4)
                ^MethodsDogHouse:11: error: illegal start of simple expression
}
^